fix alignment issues, and update prop description

--- a/stencil-workspace/src/components/modus-text-input/modus-text-input.scss
+++ b/stencil-workspace/src/components/modus-text-input/modus-text-input.scss
@@ -68,7 +68,7 @@
       }
 
       &.text-align-right {
-        padding-right: 0;
+        padding-right: $rem-8px;
         text-align: right;
       }
 
@@ -93,10 +93,6 @@
         &:hover svg path {
           opacity: 0.75;
         }
-      }
-
-      &.hidden {
-        width: $rem-8px;
       }
     }
 
